envoy-features/front_svc/envoy_front_svc.yaml
stats_sinks:
  -
    name: "envoy.statsd"
    config:
      tcp_cluster_name: "statsd-exporter"
      prefix: front-envoy
tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: zipkin
      collector_endpoint: "/api/v1/spans"
admin:
  access_log_path: "/tmp/admin_access.log"
  address: 
    socket_address: 
      address: "127.0.0.1"
      port_value: 9901
static_resources: 
  listeners:
    - 
      name: "http_listener"
      address: 
        socket_address: 
          address: "0.0.0.0"
          port_value: 80
      filter_chains:
          filters: 
            - 
              name: "envoy.http_connection_manager"
              config:
                tracing:
                  operation_name: egress
                use_remote_address: true
                add_user_agent: true
                access_log:
                - name: envoy.file_access_log
                  config:
                    path: /dev/stdout
                    format: "[ACCESS_LOG][%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" \"%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\"\n"
                stat_prefix: "ingress_443"
                codec_type: "AUTO"
                generate_request_id: true
                route_config: 
                  name: "local_route"
                  virtual_hosts: 
                    - 
                      name: "http-route"
                      domains: 
                        - "*"
                      routes: 
                        - 
                          match: 
                            prefix: "/"
                          route:
                            cluster: "backend-svc"
                http_filters:
                  - 
                    name: envoy.filters.http.jwt_authn
                    config:
                      providers:
                        keycloak_local:
                          issuer: http://localhost:8080/auth/realms/envoy
                          remote_jwks:
                            http_uri:
                              uri: http://localhost:8080/auth/realms/envoy/protocol/openid-connect/certs
                              cluster: keycloak-jwt
                          from_headers:
                          - name: Authorization
                            value_prefix: "Bearer "
                        keycloak_docker:
                          issuer: http://keycloak-jwt:8080/auth/realms/envoy
                          remote_jwks:
                            http_uri:
                              uri: http://localhost:8080/auth/realms/envoy/protocol/openid-connect/certs
                              cluster: keycloak-jwt
                          from_headers:
                          - name: Authorization
                            value_prefix: "Bearer "
                      rules:
                      - 
                        match:
                          prefix: /
                        requires:
                          requires_any:
                            requirements:
                              - provider_name: "keycloak_local"
                              - provider_name: "keycloak_docker"
                  -
                    name: envoy.router
  clusters:
    - 
      name: "keycloak-jwt"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - 
          socket_address: 
            address: "keycloak-jwt"
            port_value: 8080
    - 
      name: "backend-svc"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - 
          socket_address: 
            address: "backend-svc-envoy"
            port_value: 8786
    - 
      name: zipkin
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - 
          socket_address:
            address: zipkin
            port_value: 9411
    -
      name: "statsd-exporter"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "statsd_exporter"
            port_value: 9125
